fixed font size on small platform to fix stacking issue

--- a/assets/css/contact.css
+++ b/assets/css/contact.css
@@ -4,7 +4,7 @@
     height: 100%;
     /* margin: auto; */
     margin-top: 2.15em;
-    margin-bottom: 1.34rem;
+    margin-bottom: 3rem;
     padding: 1rem;
 }
 .contactForm {
