--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -17,6 +17,7 @@ body {
     padding: 0;
 }
 .topnav {
+    font-size: 1.5rem;
     /* text-align: center; */
     /* align-items: center; */
     /* margin: 0em 0em 0em 3em; */
@@ -56,10 +57,10 @@ footer {
     background-color: black;
     border-top: 3px solid limegreen;
     border-bottom: 1px solid limegreen;
-    /* position: absolute; */
-    /* width: 100%; */
+    position: absolute;
+    width: 100%;
     height: 3em;
-    /* position: fixed; */
+    position: fixed;
     bottom: 0;
 }
 
